--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
 <div id="footer">
     <!-- Copyright -->
     <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li>
-        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; IEP Mario Vargas Llosa</li>
+        <li>Design: <a href="">SISTEMA BAF</a></li>
     </ul>
 </div>
 
