--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <!-- Repite para más imágenes -->
             </div>
         </div>
-        <h1>Tu Sitio Web</h1>
+        <h1>Galeria</h1>
     </section>
 
     <!-- About Me -->
