--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 margin-left: 10%;
                 height: 35em;
                 width: 85%;
+                border: #c88500bd 3px solid;
             }
             .carrusel-elemento {
                 float: left;
