--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                 margin-left: 10%;
                 height: 35em;
                 width: 85%;
-                border: #c88500bd 3px solid;
+                border: #ffc700
+                        4px solid;
             }
             .carrusel-elemento {
                 float: left;
