--- a/index.html
+++ b/index.html
@@ -204,19 +204,19 @@
 
 <h2>Sección Desplegable</h2>
 
-<button class="accordion">Subtítulo 1</button>
+<button class="accordion">REGLAMENTO INTERNO</button>
 <div class="panel">
   <iframe class="pdfview" src="./assets/pdfs/reglamentoInterno2023.pdf"></iframe>
 </div>
 
-<button class="accordion">Subtítulo 2</button>
+<button class="accordion">PLAN CURRICULAR</button>
 <div class="panel">
-  <iframe class="pdfview" src="./assets/pdfs/reglamentoInterno2023.pdf"></iframe>
+  <iframe class="pdfview" src="./assets/pdfs/PLANDEESTUDIOS.pdf"></iframe>
 </div>
 
-<button class="accordion">Subtítulo 3</button>
+<button class="accordion">RESOLUCIÓN DE UGEL</button>
 <div class="panel">
-  <iframe class="pdfview" src="./assets/pdfs/reglamentoInterno2023.pdf"></iframe>
+  <iframe class="pdfview" src="./assets/pdfs/AUTORIZACIONIEPYDIRECTOR.pdf"></iframe>
 </div>
 
 
