--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://kit.fontawesome.com/57b3b8103a.js" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-solid-straight/css/uicons-solid-straight.css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
 	<script src="./nodal1.js"></script>
     <script src="./nodal2.js"></script>
@@ -40,7 +42,7 @@
                 <li><a href="#about" id="about-link"><span class="icon solid fa-user">Propuesta Educativa</span></a></li>
                 <li><a href="#pdfs" id="contact-link"><span class="icon solid fa-envelope">Boletín Informático</span></a></li>
                 <li><a href="#uniforme" id="contact-link"><span class="icon solid fa-envelope">Uniforme</span></a></li>
-                
+                <li><a href="#galery" id="contact-link"><span class="icon solid fa-envelope">Galería</span></a></li>
                 <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
                 
             </ul>
@@ -342,8 +344,120 @@
 </section>
 
 
+<!-- GALERÍA ----------------------------------------------------------------------------->
+<section id="about" class="three">
+    <h1>Galeria de Imagenes</h1>
+    <span class="linea"></span>
+    <div class="galeria">
+      <a href="#imagen1">
+        <img src="images/imagecole11.jpg" alt="">
+      </a>
+      <a href="#imagen2">
+        <img src="images/imagecole12.jpg" alt="">
+      </a>
+      <a href="#imagen3">
+        <img src="images/imagecole13.jpg" alt="">
+      </a>
+      <a href="#imagen4">
+        <img src="images/imagecole14.jpg" alt="">
+      </a>
+      <a href="#imagen5">
+        <img src="images/imagecole15.jpg" alt="">
+      </a>
+      <a href="#imagen6">
+        <img src="images/imagecole16.jpg" alt="">
+      </a>
+      <a href="#imagen7">
+        <img src="images/imagecole17.jpg" alt="">
+      </a>
+      <a href="#imagen8">
+        <img src="images/imagecole18.jpg" alt="">
+      </a>
+      <a href="#imagen9">
+        <img src="images/imagecole19.jpg" alt="">
+      </a>
+      <a href="#imagen10">
+        <img src="images/imagecole20.jpg" alt=""> 
+      </a>
 
-    <!-- Contact -->
+    </div>
+
+    <article class="light-box" id="imagen1">
+        <a href="#imagen10" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+        <img src="images/imagecole11.jpg" alt="">
+        <a href="#imagen2" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+        <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+    </article>
+
+
+    <article class="light-box" id="imagen2">
+        <a href="#imagen1" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+        <img src="images/imagecole12.jpg" alt="">
+        <a href="#imagen3" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+        <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+    </article>
+
+    <article class="light-box" id="imagen3">
+      <a href="#imagen2" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+      <img src="images/imagecole13.jpg" alt="">
+      <a href="#imagen4" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+    </article>
+
+    <article class="light-box" id="imagen4">
+      <a href="#imagen3" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+      <img src="images/imagecole14.jpg" alt="">
+      <a href="#imagen5" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+   </article>
+   <article class="light-box" id="imagen5">
+    <a href="#imagen4" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+    <img src="images/imagecole15.jpg" alt="">
+    <a href="#imagen6" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+    <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+
+
+<article class="light-box" id="imagen6">
+    <a href="#imagen5" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+    <img src="images/imagecole16.jpg" alt="">
+    <a href="#imagen7" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+    <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+
+<article class="light-box" id="imagen7">
+  <a href="#imagen6" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+  <img src="images/imagecole17.jpg" alt="">
+  <a href="#imagen8" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+  <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+
+<article class="light-box" id="imagen8">
+  <a href="#imagen7" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+  <img src="images/imagecole18.jpg" alt="">
+  <a href="#imagen9" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+  <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+
+<article class="light-box" id="imagen9">
+  <a href="#imagen8" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+  <img src="images/imagecole19.jpg" alt="">
+  <a href="#imagen10" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+  <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+
+<article class="light-box" id="imagen10">
+  <a href="#imagen9" class="next"><i class="fa-solid fa-chevron-left"></i></a>
+  <img src="images/imagecole20.jpg" alt="">
+  <a href="#imagen1" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+  <a href="#galery" class="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+</article>
+</section>
+
+
+
+
+<!-- Contact ---------------------------------------------------------------------------------------------------->
     <section id="contact" class="five">
         <div class="container">
             <header>
