arreglando colores y titulo

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="top">
 
         <!-- Logo -->
-        <div id="logo">
+        <div id="logo" style="font-size: 21px;">
             <span class="image avatar48"><img src="images/logo.png" alt="" /></span>
             <h1 id="title">Sistema BAF</h1>
-            <p>I.E.P Mario Vargas Llosa</p>
+            <p style="font-size: large;">I.E.P Mario Vargas Llosa</p>
         </div>
 
         <!-- Nav -->
