--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/57b3b8103a.js" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-solid-straight/css/uicons-solid-straight.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <li rel="icon" href="images/favicon.ico"></li>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
