--- a/index.html
+++ b/index.html
@@ -32,24 +32,31 @@
     <div class="top">
 
         <!-- Logo -->
-        <div id="logo" style="font-size: 21px;">
-            <span class="image avatar48">
-            <img src="images/logo.png" alt="" /></span>
+        
+        <div id="logo">
+            <span class="image avatar48"><img src="images/logo.png" alt="" /></span>
             <h1 id="title">Sistema BAF</h1>
-            <p style="font-size: medium;">I.E.P Mario Vargas Llosa</p>
+            <p>I.E.P Mario Vargas Llosa</p>
         </div>
 
 
         <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-                    <li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-                    <li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+                    <li><a href="#top" id="top-link"><span class="icon solid fa-house"></span>
+                        <span class="icon-text">Inicio</span></a></li>
+                    <li><a href="#portfolio" id="portfolio-link"><span class="icon regular fa-newspaper"></span>
+                        <span class="icon-text">Boletín</span></a></li>
+                    <li><a href="#about" id="about-link"><span class="icon regular fa-address-card"></span>
+                        <span class="icon-text">Nosotros</span></a></li>
+                    <li><a href="#contact" id="contact-link"><span class="icon regular fa-file-pdf"></span>
+                        <span class="icon-text">Documentanción</span></a></li>
+                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-shirt"></span>
+                        <span class="icon-text">Uniforme</span></a></li>
+                    <li><a href="#contact" id="contact-link"><span class="icon regular fa-image"></span>
+                        <span class="icon-text">Galería</span></a></li>
+                    <li><a href="#contact" id="contact-link"><span class="icon regular fa-envelope"></span>
+                        <span class="icon-text">Contactos</span></a></li>
                 </ul>
             </nav>
 
@@ -61,8 +68,7 @@
             <ul class="icons">
                 <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+                
                 <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
 
