--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@
                 <ul>
                     <li><a href="#top" id="top-link"><span class="icon solid fa-house"></span>
                         <span class="icon-text">Inicio</span></a></li>
+
                     <li><a href="#portfolio" id="portfolio-link"><span class="icon regular fa-newspaper"></span>
                         <span class="icon-text">Boletín</span></a></li>
+
                     <li><a href="#about" id="about-link"><span class="icon regular fa-address-card"></span>
                         <span class="icon-text">Nosotros</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon regular fa-file-pdf"></span>
+
+                    <li><a href="#pdfs" id="contact-link"><span class="icon regular fa-file-pdf"></span>
                         <span class="icon-text">Documentanción</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon solid fa-shirt"></span>
+
+                    <li><a href="#uniforme" id="contact-link"><span class="icon solid fa-shirt"></span>
                         <span class="icon-text">Uniforme</span></a></li>
-                    <li><a href="#contact" id="contact-link"><span class="icon regular fa-image"></span>
+
+                    <li><a href="#galery" id="contact-link"><span class="icon regular fa-image"></span>
                         <span class="icon-text">Galería</span></a></li>
+
                     <li><a href="#contact" id="contact-link"><span class="icon regular fa-envelope"></span>
                         <span class="icon-text">Contactos</span></a></li>
                 </ul>
